# NextEventLibrary

./: Cargo.toml
macros/: Cargo.toml
macros/src/: lib.rs  support.rs
src/: Engines.rs  Events.rs  lib.rs
src/Collections/: LightweightList.rs  Matrix.rs  mod.rs
src/Data/: DataStore.rs  Generator.rs  Statistics.rs  mod.rs
src/Helpers/: clone.rs  mod.rs  special_traits.rs
src/Numerical/: GCalculator.rs  MVASolver.rs  SystemComposer.rs  mod.rs
src/Random/: RandomVariable.rs  mod.rs  rngs.rs  rvgs.rs  rvms.rs
src/Stations/: ArrivalHandler.rs  DepartureHandler.rs  FCFSRuler.rs  FCFSStation.rs  Processor.rs  RoundRobinRuler.rs  Station.rs  StationData.rs  StationHeader.rs  mod.rs
src/Statistics/: StationStatistics.rs  mod.rs
