[package]
name = "NESLib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["lib"]
name = "NESLib"

[env]
BUFFER_SIZE= 1000


[dependencies]
log = "0.4.19"
NESLib-macros = {path = "macros"}
serde = {version="1.0.188",features = ["derive"]}
csv = "1.2.2"
plotters = "0.3.5"

